# agent_eval_harness

./: .gitignore  GOALS.md  README.md  pyproject.toml  requirements.txt
data/: custom_testset.jsonl  squad_corpus.jsonl  squad_sample.jsonl  testset.jsonl
data/corpus/: billing_faq.md  product_overview.md  security.txt
docs/: PROJECT_NOTES.md  RESULTS.md  repo_overview.html
src/agent_eval/: __init__.py  __main__.py  cli.py  compare.py  runner.py  scorers.py  systems.py  task.py
src/example_rag/: __init__.py  __main__.py  cli.py  demo.py  generators.py  retrievers.py  text.py
src/rag_eval/: __init__.py  __main__.py  cli.py  compare.py  data.py  demo.py  pipeline.py  protocols.py  runner.py  scorers.py  task.py
tests/: test_extractive_generator.py  test_generative_generator.py  test_harness.py  test_llm_generator.py
