[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval"
version = "0.1.0"
description = "An offline-first evaluation harness for RAG question-answering systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "rag-eval contributors" }
]
dependencies = [
  "datasets==3.6.0",
  "numpy==2.3.1",
  "pandas==2.3.0"
]

[project.scripts]
rag-eval = "rag_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
