[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval"
version = "0.1.0"
description = "An offline-first evaluation harness for RAG question-answering systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "rag-eval contributors" }
]
dependencies = [
  "datasets==4.0.0",
  "numpy==2.3.1",
  "openai==2.41.1",
  "pandas==2.3.0",
  "rank_bm25==0.2.2",
]

[dependency-groups]
dev = [
  "pytest==8.4.1"
]

[project.scripts]
rag-eval = "example_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
